--- a/css/index.css
+++ b/css/index.css
@@ -1,184 +1,138 @@
-html,body{
-    height:100%;
-    font-size: 0.75rem;
-    color: #343434;
-        }
-.wrap{
-    flex-direction:column;
-    display:flex;
+.header{
+    height: 3.525rem;
+    background: #ebebeb;
+    border-bottom: 0.025rem solid #d1d1d1;
+}
+.header .banner{
     height: 100%;
+    background: url(../img/banner.png) no-repeat;
+    background-size: 16rem 2.975rem;
 }
-section{
-    flex:1;
-    overflow: auto;
-}
-.head{
-    width: 16rem;
-    height: 2.25rem;
-    background: #262626;
-    border-bottom: 0.1rem solid #49caac;
-    display: flex;
-    justify-content:space-between;
-    align-items:center;
-}
-h1{
-    font-size: 0.95rem;
-    color: #fff;
-}
-.head a{
-    width: 1.45rem;
-    height: 1.175rem;
-    background-size: 1.45rem 1.175rem;
-    text-indent: -9999rem;
-}
-.menu{
-    background: url(../img/m-bg.png) no-repeat;
-    margin-left: 0.4rem;
-}
-.pc{
-    background: url(../img/p-bg.png) no-repeat;
-    margin-right: 0.4rem;
-}
-.user{
-    height: 2.05rem;
-    background: #fafafa;
-    border-bottom: 0.05rem solid #e1e1e1;
-    display:flex;
-    align-items:center;
-}
-a{
-    font-size: 0.7rem;
-}
-.user a{
-    height: 1.45rem;
-    line-height: 1.45rem;
-    color: #898d90;
-    flex:1;
-    padding-left: 3.45rem;
-}
-.user .login{
-    background: url(../img/login.png) no-repeat 1.4rem center;
-    background-size: 1.45rem 1.45rem;
-}
-.user .register{
-    background: url(../img/register.png) no-repeat 1.4rem center;
-    background-size: 1.45rem 1.45rem;
-    border-left: 0.05rem solid #e6e6e6;
-}
-img{
-    width: 100%;
-}
-.artical-ul{
-    width: 100%;   
-}
-.artical li{
-    width: 15.2rem;
-    height: 2rem;
-    line-height: 2rem;
-    border-top: 0.05px solid #ebebeb;
-    margin: 0 0.4rem;
-}
-.artical li a{
-    width: 14.05rem;
-    padding-left: 0.35rem;
-}
-.artical .top-1{ border-top: none;}
-.top-1 .top-p{ padding-left: 0.25rem;}
-.hot-q{
-    height: 2rem;
-    background: #fafafa;
-    border-top: 0.1rem solid #58c1b0;
-    border-bottom: 0.05px solid #ebebeb;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding-left: 0.75rem;
-}
-.hot-q .hot-icon{
-    width: 1.45rem;
-    height: 1.45rem;
-    background: url(../img/q-bg.png) no-repeat;
-    background-size: 1.45rem 1.45rem;
+.header .icon{
+    width: 0.975rem;
+    height: 0.9rem;
+    background: url(../img/bg-2.png) no-repeat;
+    background-size: 0.975rem 0.9rem;
     display:block;
-    padding-right: 0.7rem;
+    position: absolute;
+    right: 0.6rem;
+    top: 1.025rem;
 }
-.tabs{
+.list{
+    height: 1.45rem;
+    background: url(../img/wing.png) no-repeat center 0.85rem;
+    background-size: 7.9rem 1.75rem;
+    font-size: 0.75rem;
+    color: #674532;
     display:flex;
-    height: 2rem;
-    border-bottom: 0.05px solid #ececec;
-    line-height: 2rem;
+    justify-content:center;
+    padding-top: 1.85rem;
 }
-.tabs div{
-    width: 3.2rem;
+.list-box{
+    width: 13.3rem;
+    font-size:0.45rem;
+    color: #333;
+    margin:0 auto;
+}
+.list-div .pic{
+    width: 6.25rem;
+    height: 4.35rem;
+    border: 0.025rem solid #ccc;
+    background: url(../img/bed.png) no-repeat center center;
+    background-size: 3.25rem 3.5rem;
+}
+.list-div .pic1{
+    width: 6.25rem;
+    height: 4.35rem;
+    border: 0.025rem solid #ccc;
+    background: url(../img/big-bed.png) no-repeat center center;
+    background-size: 5rem 3.15rem;
+}
+.list-div .pic2{
+    width: 6.25rem;
+    height: 4.35rem;
+    border: 0.025rem solid #ccc;
+    background: url(../img/sofa.png) no-repeat center center;
+    background-size: 6rem 2.25rem;
+}
+.list-div .pic3{
+    width: 6.25rem;
+    height: 4.35rem;
+    border: 0.025rem solid #ccc;
+    background: url(../img/table.png) no-repeat center center;
+    background-size: 5.3rem 3.05rem;
+}
+.list-div .pic4{
+    width: 6.25rem;
+    height: 4.35rem;
+    border: 0.025rem solid #ccc;
+    background: url(../img/beg-bed1.png) no-repeat center center;
+    background-size: 5.3rem 3.05rem;
+}
+.list-div .pic5{
+    width: 6.25rem;
+    height: 4.35rem;
+    border: 0.025rem solid #ccc;
+    background: url(../img/bookcase.png) no-repeat center center;
+    background-size: 5.3rem 2.95rem;
+}
+.list-div .text{
+    height: 1.375rem;
     text-align: center;
+    line-height: 1.375rem;
 }
-.tabs .on{
-    border-bottom: 0.1rem solid #d43553;
+.more{
+    height: 1.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-#top-1{
-    height: 6.5rem;
+.more a{
+    width: 2.8rem;
+    height: 0.625rem;
+    background: #dcdcdc;
+    font-size: 0.45rem;
+    color: #666;
+    padding-left: 0.45rem;
+    padding-top: 0.2rem;
 }
-#box{
-    display:flex;
-    padding-left: 0.25rem;
+.empty{
+    height: 0.55rem;
+    background: #ebebeb;
+    border-top: 0.025rem solid #d1d1d1;
 }
-.pic{
-    display:block;
-    width: 5.2rem;
-    height: 3.7rem;
-    background: url(../img/comet.png) no-repeat;
-    background-size: 5.2rem 3.7rem;
-}
-#top-1 .text{
-    width: 8.4rem;
-    font-size: 0.65rem;
-    color: #989898;
-    line-height: 1.25rem;
-    padding-left: 0.5rem;
-}
-#pic{
-    background: url(../img/animal.png) no-repeat;
-    background-size: 5.2rem 3.7rem;
-}
-.back-top{
-    height: 3rem;
-    background: #fafafa;
-    border-top: 0.05rem solid #e4e4e4;
-    line-height: 3rem;
-    border-bottom: 0.1rem solid #50cdab;
-}
-.back-top .back-pic{
-    display:inline-block;
-    background: url(../img/back.png) no-repeat 5.45rem center;
-    background-size: 1.45rem 1.45rem;
-    color: #6e7275;
-    padding-left: 7.4rem;
-}
-.foot{
-    width: 16rem;
-    height: 3.75rem;
-    background: #262626;
-    display:flex;
-    align-items:center;
-}
-.foot a{
-    height: 1.9rem;
-    flex:1;
-    color: #fff;
-    line-height: 1.9rem;
-}
-.foot-pc{
-    background: url(../img/p-bg.png) no-repeat 2.05rem center;
-    background-size: 1.45rem 1.175rem;
-}
-.foot-pc .foot-p1{
-    padding-left: 4.1rem;
-}
-.foot-app{
-    background: url(../img/phone.png) no-repeat 1.8rem center;
-    background-size: 0.65rem 1.15rem;
-    border-left: 0.05rem solid #666;
-}
-.foot-app .foot-p2{
-    padding-left: 3.05rem;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
